# confii-py

./: .buildinfo  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE.txt  Makefile  README.md  SECURITY.md  confii.example.yaml  contributing.html  examples.html  genindex.html  index.html  installation.html  migration_guide.html  objects.inv  overview.html  py-modindex.html  pyproject.toml  pyrightconfig.json  quickstart.html  requirements-test.txt  requirements.txt  search.html  searchindex.js  secret_stores_guide.html  tox.ini  vault_authentication.html
.devcontainer/: Dockerfile  README2.md  devcontainer.json  docker-compose.yml
.devcontainer/scripts/: localstack-init.sh  post-create.sh  post-start.sh  setup-localstack.sh
.doctrees/: contributing.doctree  environment.pickle  examples.doctree  index.doctree  installation.doctree  migration_guide.doctree  overview.doctree  quickstart.doctree  secret_stores_guide.doctree  vault_authentication.doctree
.doctrees/api/: async_config.doctree  cli.doctree  config.doctree  config_builder.doctree  config_diff.doctree  config_versioning.doctree  exceptions.doctree  index.doctree  introspection.doctree  loaders.doctree  merge_strategies.doctree  observability.doctree  secret_stores.doctree  validators.doctree
.doctrees/user_guide/: advanced_features.doctree  configuration_sources.doctree  index.doctree  secret_stores.doctree  validation.doctree
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: auto-tag.yml  ci.yml  codeql.yml  dependency-review.yml  docs.yml  release.yml  scorecard.yml
_modules/: index.html
_modules/confii/: async_config.html  config.html  config_builder.html  config_diff.html  config_introspection.html  config_versioning.html  exceptions.html  merge_strategies.html  observability.html
_modules/confii/loaders/: env_file_loader.html  environment_loader.html  ini_loader.html  json_loader.html  loader.html  remote_loader.html  ssm_loader.html  toml_loader.html  yaml_loader.html
_modules/confii/secret_stores/: base.html  resolver.html
_modules/confii/validators/: pydantic_validator.html  schema_validator.html
_sources/: index.rst.txt  installation.rst.txt  migration_guide.md.txt  quickstart.rst.txt  secret_stores_guide.md.txt
_sources/api/: config_diff.rst.txt  index.rst.txt  observability.rst.txt  secret_stores.rst.txt
_sources/user_guide/: configuration_sources.rst.txt
_static/: documentation_options.js
api/: async_config.html  cli.html  config.html  config_builder.html  config_diff.html  config_versioning.html  exceptions.html  index.html  introspection.html  loaders.html  merge_strategies.html  observability.html  secret_stores.html  validators.html
docs/: VAULT_AUTHENTICATION.md
docs/source/: conf.py  contributing.rst  examples.rst  installation.rst  overview.rst  quickstart.rst  secret_stores_guide.md  vault_authentication.md
docs/source/_static/: custom.css  llms.txt
docs/source/api/: async_config.rst  cli.rst  config.rst  config_builder.rst  config_versioning.rst  exceptions.rst  introspection.rst  loaders.rst  merge_strategies.rst  validators.rst
docs/source/user_guide/: advanced_features.rst  index.rst  secret_stores.rst  validation.rst
examples/: advanced_features.py  async_example.py  basic_usage.py  config_management.py  extensibility.py  introspection_api.py  loaders_showcase.py  secret_store_example.py  typed_config.py  validation_example.py  vault_auth_examples.py  working_demo.py
scripts/: calc_version.py
src/confii/: VERSION  __about__.py  __init__.py  async_config.py  attribute_accessor.py  calver.py  cli.py  config.py  config_access.py  config_builder.py  config_composition.py  config_debug.py  config_diff.py  config_extender.py  config_introspection.py  config_loader.py  config_loading.py  config_merger.py  config_observability_mixin.py  config_reader.py  config_validation_mixin.py  config_versioning.py  config_watcher.py  enhanced_source_tracker.py  environment_handler.py  exceptions.py  exporters.py  ide_support.py  loader_manager.py  merge_strategies.py  observability.py  plugin_loader.py  secret_factory.py  source_factory.py  source_tracker.py  vault_resolver.py
src/confii/hooks/: env_var_expander.py  type_casting.py
src/confii/loaders/: __init__.py  env_file_loader.py  environment_loader.py  ini_loader.py  json_loader.py  loader.py  remote_loader.py  ssm_loader.py  toml_loader.py  yaml_loader.py
src/confii/secret_stores/: __init__.py  base.py  resolver.py
src/confii/utils/: format_parser.py  toml_compat.py  type_coercion.py
src/confii/validators/: __init__.py  pydantic_validator.py  schema_validator.py
tests/: test_async_config.py  test_attribute_accessor.py  test_bug_exposures.py  test_cli.py  test_cli_commands.py  test_config.py  test_config_diff.py  test_config_extender.py  test_config_introspection.py  test_config_loader.py  test_config_merger.py  test_config_reader.py  test_config_versioning.py  test_config_watcher.py  test_confii_file.py  test_deep_merge_comprehensive.py  test_docs_generator.py  test_enhanced_source_tracker.py  test_env_file_loader.py  test_env_switcher.py  test_environment_handler.py  test_environment_loader_separator.py  test_exporters.py  test_file_tracker.py  test_hook_processor.py  test_ide_support.py  test_ini_loader.py  test_integration_workflows.py  test_lazy_loader.py  test_loaders.py  test_merge_strategies.py  test_new_features.py  test_observability.py  test_on_change_callbacks.py  test_override.py  test_readme_examples.py  test_real_world_integration.py  test_secret_factory.py  test_secret_stores.py  test_source_factory.py  (+4 more)
tests/benchmarks/: __init__.py  test_performance.py
tests/test_loaders/: test_cloud_storage_loaders.py  test_remote_loader.py
tests/test_validators/: test_pydantic_validator.py  test_schema_validator.py
user_guide/: advanced_features.html  configuration_sources.html  index.html  secret_stores.html  validation.html
(+25 files in other folders)
