[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# =============================================================================
# Project metadata (PEP 621)
# =============================================================================

[project]
name = "confii"
dynamic = ["version"]
description = "A flexible configuration management library for Python applications"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE.txt"]
keywords = ["configuration", "management", "python", "yaml", "json", "toml", "env"]
authors = [
  { name = "confiify", email = "confii.connect@gmail.com" },
]
maintainers = [
  { name = "confiify", email = "confii.connect@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Operating System :: OS Independent",
  "Typing :: Typed",
]
dependencies = [
  "pyyaml>=6.0",
  "tomli>=2.0.0; python_version < '3.11'",
]

# =============================================================================
# Optional dependencies
# =============================================================================

[project.optional-dependencies]
# User-facing feature extras
watch = ["watchdog>=2.0.0"]
cli = ["click>=8.0.0"]
cloud = [
  "boto3>=1.26.0",
  "azure-storage-blob>=12.14.0",
  "azure-identity>=1.12.0",
  "google-cloud-storage>=2.7.0",
  "ibm-cos-sdk>=2.13.0",
  "requests>=2.28.0",
]
validation = [
  "pydantic>=2.0.0",
  "jsonschema>=4.17.0",
]
secrets = [
  "boto3>=1.26.0",
  "hvac>=1.1.0",
  "azure-keyvault-secrets>=4.6.0",
  "azure-identity>=1.12.0",
  "google-cloud-secret-manager>=2.16.0",
]
all = [
  "confii[watch,cli,cloud,validation,secrets]",
]

# Development extras
test = [
  "pytest>=7.0.0",
  "pytest-cov>=4.0.0",
  "pytest-mock>=3.10.0",
  "pytest-xdist>=3.0.0",
  "toml>=0.10.0",
]
docs = [
  "sphinx>=6.0.0",
  "sphinx-rtd-theme>=1.2.0",
  "sphinx-autodoc-typehints>=1.22.0",
]
dev = [
  "confii[test,docs]",
  "ruff>=0.4.0",
  "mypy>=1.0.0",
  "pre-commit>=3.0.0",
  "types-PyYAML>=6.0.0",
  "types-toml>=0.10.0",
  "bandit>=1.7.0",
  "radon>=6.0.0",
  "ipython>=8.0.0",
]

# =============================================================================
# Entry points
# =============================================================================

[project.urls]
Documentation = "https://github.com/confiify/confii-py#readme"
Issues = "https://github.com/confiify/confii-py/issues"
Source = "https://github.com/confiify/confii-py"
Changelog = "https://github.com/confiify/confii-py/blob/main/CHANGELOG.md"

[project.scripts]
confii = "confii.cli:cli"

# =============================================================================
# Hatch build configuration
# =============================================================================

[tool.hatch.version]
path = "src/confii/VERSION"

[tool.hatch.build.targets.wheel]
packages = ["src/confii"]

# =============================================================================
# Hatch environments
# =============================================================================

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
  "pytest",
  "ruff",
  "pre-commit",
  "pre-commit-hooks",
]

[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/confii tests}"

# =============================================================================
# Ruff (linter + formatter — replaces black, isort, flake8)
# =============================================================================

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "F",    # pyflakes
  "W",    # pycodestyle warnings
  "I",    # isort
  "N",    # pep8-naming
  "UP",   # pyupgrade
  "B",    # flake8-bugbear
  "SIM",  # flake8-simplify
  "RUF",  # ruff-specific rules
]
ignore = [
  "E501",   # line length — formatter handles this
  "E721",   # type comparison — sometimes intentional
  "E731",   # lambda assignment
  "E741",   # ambiguous variable name
  "N801",   # class name casing
  "N802",   # function name casing
  "N806",   # variable in function should be lowercase
  "N814",   # camelCase import as constant
  "N817",   # CamelCase import as acronym
  "C901",   # too complex
  "UP006",  # use builtin generics (list[x]) — needs __future__ annotations for 3.9
  "UP007",  # use X | Y for union — requires 3.10+
  "UP035",  # deprecated typing imports — needs __future__ annotations for 3.9
  "UP045",  # use X | None — requires 3.10+
  "E402",   # module import not at top — TYPE_CHECKING pattern used throughout
  "B904",   # raise from in except — TODO: fix incrementally
  "F841",   # unused variable — too many false positives during development
  "SIM108", # ternary operator — often less readable
  "SIM105", # suppressible-exception — contextlib.suppress not always clearer
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]  # unused/wildcard imports OK in __init__
"tests/**" = [
  "B011", "B017", "B018",   # assert/exception style relaxed in tests
  "F401",                     # try/import for availability checks
  "SIM102", "SIM112", "SIM115", "SIM117", "SIM118",  # style flexibility in tests
  "RUF012", "RUF015", "RUF059",  # test-specific patterns
]
"examples/**" = ["F401", "E402", "SIM115"]

[tool.ruff.lint.isort]
known-first-party = ["confii"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

# =============================================================================
# mypy
# =============================================================================

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
strict = false
warn_return_any = false
warn_unused_configs = true
no_implicit_reexport = false
warn_redundant_casts = true
warn_unused_ignores = false
strict_optional = false
exclude = ["tests/", "examples/", "docs/"]

[[tool.mypy.overrides]]
module = [
  "confii.secret_stores.*",
  "confii.validators.*",
  "confii.exporters",
  "confii.loader_manager",
  "confii.config_watcher",
  "confii.loaders.remote_loader",
  "confii.source_factory",
]
ignore_errors = true

# =============================================================================
# pytest
# =============================================================================

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
  "-ra",
  "--strict-markers",
  "--strict-config",
]
markers = [
  "slow: marks tests as slow",
  "integration: marks integration tests",
]
xfail_strict = true

# =============================================================================
# Coverage
# =============================================================================

[tool.coverage.run]
source_pkgs = ["confii", "tests"]
branch = true
parallel = true
omit = [
  "src/confii/__about__.py",
]

[tool.coverage.paths]
confii = ["src/confii", "*/confii-py/src/confii"]
tests = ["tests", "*/confii-py/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

# =============================================================================
# confii-py self-configuration
# =============================================================================

[tool.confii]
default_environment = "development"
default_files = ["config.yaml", "config.json", "config.toml"]
default_prefix = "PREFIX"
dynamic_reloading = false

[tool.confii.loaders]
yaml = "confii.loaders.yaml_loader:YamlLoader"
json = "confii.loaders.json_loader:JsonLoader"
toml = "confii.loaders.toml_loader:TomlLoader"
env = "confii.loaders.environment_loader:EnvironmentLoader"
